manage repo initial commit
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -779,6 +779,12 @@
 				"icon": "$(plus)"
 			},
 			{
+				"command": "openshift.Serverless.manageRepository",
+				"title": "Manage Repositories",
+				"category": "OpenShift",
+				"icon": "$(gist)"
+			},
+			{
 				"command": "openshift.Serverless.refresh",
 				"title": "Refresh Serverless Function View",
 				"category": "OpenShift",
@@ -1279,6 +1285,11 @@
 					"command": "openshift.Serverless.refresh",
 					"when": "view == openshiftServerlessFunctionsView",
 					"group": "navigation@1"
+				},
+				{
+					"command": "openshift.Serverless.manageRepository",
+					"when": "view == openshiftServerlessFunctionsView",
+					"group": "navigation@2"
 				},
 				{
 					"command": "openshift.component.openCreateComponent",
