addressed review comments
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -786,7 +786,7 @@
 			},
 			{
 				"command": "openshift.Serverless.manageRepository",
-				"title": "Manage Repositories",
+				"title": "Manage Knative Function Template Repositories",
 				"category": "OpenShift",
 				"icon": "$(gist)"
 			},
