Implement manage repositories workflow in serverless view (#3126)
* manage repo initial commit

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* add,edit and delete functionalites were added

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* added telemetery

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* added telemetery

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* refactor the method

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* Update src/webview/manage-repository/app/addRepository.tsx

Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

* changed the entire layout

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* addressed review comments

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* removed loading button

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* addressed review comments

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

* desc changed

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

---------

Signed-off-by: msivasubramaniaan <msivasub@redhat.com>
Co-authored-by: Mohit Suman <mohit.skn@gmail.com>

--- a/package.json
+++ b/package.json
@@ -785,6 +785,12 @@
 				"icon": "$(plus)"
 			},
 			{
+				"command": "openshift.Serverless.manageRepository",
+				"title": "Manage Knative Function Template Repositories",
+				"category": "OpenShift",
+				"icon": "$(gist)"
+			},
+			{
 				"command": "openshift.Serverless.refresh",
 				"title": "Refresh Serverless Function View",
 				"category": "OpenShift",
@@ -1298,6 +1304,11 @@
 					"command": "openshift.Serverless.refresh",
 					"when": "view == openshiftServerlessFunctionsView",
 					"group": "navigation@1"
+				},
+				{
+					"command": "openshift.Serverless.manageRepository",
+					"when": "view == openshiftServerlessFunctionsView",
+					"group": "navigation@2"
 				},
 				{
 					"command": "openshift.component.openCreateComponent",
