--- a/.eslintignore
+++ b/.eslintignore
@@ -18,6 +18,7 @@ src/webview/welcome
 src/webview/helm-chart
 src/webview/feedback
 src/webview/serverless-function
+src/webview/serverless-manage-repository
 # vendored from https://github.com/IonicaBizau/git-url-parse, see https://github.com/IonicaBizau/git-url-parse/pull/159
 src/util/gitParse.ts
 test/sandbox-registration
