--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
         "src/webview/helm-chart/app",
         "src/webview/feedback/app",
         "src/webview/serverless-function/app",
+        "src/webview/serverless-manage-repository/app",
         "src/webview/common"
     ]
 }
