Why is the dependency on vscode-kubernetes added during release? #3091
Fixes: #3091

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -74,7 +74,8 @@
             "sourceMaps": true,
             "preLaunchTask": "instrument",
             "env": {
-                "VSCODE_REDHAT_TELEMETRY_DEBUG":"true"
+                "VSCODE_REDHAT_TELEMETRY_DEBUG":"true",
+                "IS_OPENSHIFT": "true",
             }
         },
         {
