--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
 		"unzip-stream": "^0.3.1",
 		"validator": "^13.7.0",
 		"vscode-kubernetes-tools-api": "^1.3.0",
-		"yaml": "^2.2.2"
+		"js-yaml": "^4.1.0"
 	},
 	"devDependencies": {
 		"@devfile/api": "^2.2.0-alpha-1666195451",
