--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"got": "^11.8.6",
 		"hasha": "^5.2.2",
 		"immutable": "^4.0.0",
+		"js-yaml": "^4.1.0",
 		"json-schema": "^0.4.0",
 		"lodash": "^4.17.21",
 		"make-fetch-happen": "^13.0.0",
@@ -96,8 +97,7 @@
 		"tree-kill": "^1.2.2",
 		"unzip-stream": "^0.3.1",
 		"validator": "^13.7.0",
-		"vscode-kubernetes-tools-api": "^1.3.0",
-		"js-yaml": "^4.1.0"
+		"vscode-kubernetes-tools-api": "^1.3.0"
 	},
 	"devDependencies": {
 		"@devfile/api": "^2.2.0-alpha-1666195451",
@@ -183,7 +183,6 @@
 		"survey-react-ui": "^1.9.89",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.5.2",
-		"utf-8-validate": "^5.0.7",
 		"vscode-extension-tester": "^5.2.0"
 	},
 	"activationEvents": [
