Why is the dependency on vscode-kubernetes added during release? #3091 (#3170)
Fixes: #3091

Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/package.json
+++ b/package.json
@@ -1891,7 +1891,8 @@
 		]
 	},
 	"extensionDependencies": [
-		"redhat.vscode-redhat-account"
+		"redhat.vscode-redhat-account",
+		"ms-kubernetes-tools.vscode-kubernetes-tools"
 	],
 	"__metadata": {
 		"id": "8fea1f1f-b45c-4eea-b479-3a92c6e697d3",
