--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	},
 	"bugs": "https://github.com/redhat-developer/vscode-openshift-tools/issues",
 	"engines": {
-		"vscode": "^1.64.2"
+		"vscode": "^1.64.2",
+		"npm" : ">=8.0.0 <9.0.0",
+		"node" : ">=16.0.0  <18.0.0"
 	},
 	"badges": [
 		{
