Fix eslint build errors after update for @typescript-eslint/eslint-plugin and @typescript-eslint/parser
Signed-off-by: Victor Rubezhny <vrubezhny@redhat.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -102,7 +102,8 @@
     "no-trailing-spaces": "error",
     "@typescript-eslint/prefer-regexp-exec": 0,
     "quotes": [ "error", "single"],
-    "@typescript-eslint/no-unused-vars": [ "error", { "vars": "local", "args": "none" }]
+    "@typescript-eslint/no-unused-vars": [ "error", { "vars": "local", "args": "none" }],
+    "@typescript-eslint/no-explicit-any": 1
   },
   "overrides": [
     {
