--- a/package.json
+++ b/package.json
@@ -1764,6 +1764,18 @@
 						]
 					},
 					{
+						"id": "createFunctionWithGitTemplate",
+						"title": "Create Function using git template",
+						"description": "Creates a Function in the mentioned directory with the specified git based template selected and handles HTTP events. \n[Create Function](command:openshift.Serverless.createFunction)",
+						"media": {
+							"image": "images/walkthrough/serverless-function/create-function-template.gif",
+							"altText": "Create function"
+						},
+						"completionEvents": [
+							"onCommand:openshift.Serverless.createFunction"
+						]
+					},
+					{
 						"id": "buildFunction",
 						"title": "Build Function",
 						"description": "Build a function project (source code in the workspace) as a container image and push to a registry.",
