--- a/package.json
+++ b/package.json
@@ -788,8 +788,18 @@
 				"icon": "$(refresh)"
 			},
 			{
-				"command": "openshift.Serverless.build",
-				"title": "Build",
+				"command": "openshift.Serverless.baseBuild",
+				"title": "Base Build",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.s2iBuild",
+				"title": "S2I Build",
+				"category": "OpenShift"
+			},
+			{
+				"command": "openshift.Serverless.linuxAMD64Build",
+				"title": "Linux/amd64 Build",
 				"category": "OpenShift"
 			},
 			{
@@ -883,6 +893,10 @@
 			{
 				"id": "serverlessfunction/removeConfig",
 				"label": "Remove"
+			},
+			{
+				"id": "serverlessfunction/buildConfig",
+				"label": "Build Configuration"
 			}
 		],
 		"viewsContainers": {
@@ -1189,7 +1203,15 @@
 					"when": "false"
 				},
 				{
-					"command": "openshift.Serverless.build",
+					"command": "openshift.Serverless.baseBuild",
+					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.s2iBuild",
+					"when": "false"
+				},
+				{
+					"command": "openshift.Serverless.linuxAMD64Build",
 					"when": "false"
 				},
 				{
@@ -1363,6 +1385,23 @@
 					"command": "openshift.Serverless.removeVolume",
 					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
 					"group": "c1@3"
+				}
+			],
+			"serverlessfunction/buildConfig": [
+				{
+					"command": "openshift.Serverless.baseBuild",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctions|localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@0"
+				},
+				{
+					"command": "openshift.Serverless.s2iBuild",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctions|localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@1"
+				},
+				{
+					"command": "openshift.Serverless.linuxAMD64Build",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctions|localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@2"
 				}
 			],
 			"view/item/context": [
@@ -1625,10 +1664,6 @@
 					"when": "view == openshiftProjectExplorer && viewItem == openshift.k8sObject && isOpenshiftCluster || openshift.k8sObject.helm && isOpenshiftCluster"
 				},
 				{
-					"command": "openshift.Serverless.build",
-					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctions|localFunctionsWithBuild|localDeployFunctions)$/"
-				},
-				{
 					"command": "openshift.Serverless.buildAndRun",
 					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctions|localFunctionsWithBuild|localDeployFunctions)$/"
 				},
@@ -1660,6 +1695,11 @@
 				{
 					"submenu": "serverlessfunction/removeConfig",
 					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctionsWithBuild|localDeployFunctions)$/",
+					"group": "c1@2"
+				},
+				{
+					"submenu": "serverlessfunction/buildConfig",
+					"when": "view == openshiftServerlessFunctionsView && viewItem =~ /^(localFunctions|localFunctionsWithBuild|localDeployFunctions)$/",
 					"group": "c1@2"
 				},
 				{
