add,delete,update and sync functionalities were added
Signed-off-by: msivasubramaniaan <msivasub@redhat.com>

--- a/package.json
+++ b/package.json
@@ -374,23 +374,13 @@
 				"category": "OpenShift"
 			},
 			{
-				"command": "openshift.helm.add",
-				"title": "Add Repository",
+				"command": "openshift.helm.manageRepository",
+				"title": "Manage Repositories",
 				"category": "OpenShift"
 			},
 			{
 				"command": "openshift.helm.open",
 				"title": "Open Helm Charts",
-				"category": "OpenShift"
-			},
-			{
-				"command": "openshift.helm.repo.delete",
-				"title": "Delete",
-				"category": "OpenShift"
-			},
-			{
-				"command": "openshift.helm.repo.update",
-				"title": "Update",
 				"category": "OpenShift"
 			},
 			{
@@ -1186,7 +1176,7 @@
 					"when": "false"
 				},
 				{
-					"command": "openshift.helm.add",
+					"command": "openshift.helm.manageRepository",
 					"when": "false"
 				},
 				{
@@ -1199,14 +1189,6 @@
 				},
 				{
 					"command": "openshift.helm.open",
-					"when": "false"
-				},
-				{
-					"command": "openshift.helm.repo.delete",
-					"when": "false"
-				},
-				{
-					"command": "openshift.helm.repo.update",
 					"when": "false"
 				},
 				{
@@ -1780,23 +1762,13 @@
 					"group": "inline"
 				},
 				{
-					"command": "openshift.helm.add",
+					"command": "openshift.helm.manageRepository",
 					"when": "view == openshiftProjectExplorer && viewItem == openshift.helm.repos",
 					"group": "c1"
 				},
 				{
 					"command": "openshift.helm.openView",
 					"when": "view == openshiftProjectExplorer && viewItem == openshift.helm.repos",
-					"group": "c2"
-				},
-				{
-					"command": "openshift.helm.repo.delete",
-					"when": "view == openshiftProjectExplorer && viewItem == openshift.helm.repo",
-					"group": "c1"
-				},
-				{
-					"command": "openshift.helm.repo.update",
-					"when": "view == openshiftProjectExplorer && viewItem == openshift.helm.repo",
 					"group": "c2"
 				}
 			]
